{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 224,
  "lineage": "1e7799d7-a872-f8fc-54a2-3b98493c7b56",
  "resources": [
    {
      "module": "module.students[\"abka007\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"abka007\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-08f52ccefd560fd31",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "abka007-profile",
            "id": "i-08f52ccefd560fd31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e3923ad4222b7f8",
            "private_dns": "ip-172-31-9-95.eu-north-1.compute.internal",
            "private_ip": "172.31.9.95",
            "public_dns": "ec2-16-170-37-142.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.37.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e90a3e71d857bc35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "abka007}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "abka007"
            },
            "tags_all": {
              "Name": "abka007"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2b776050108bc79"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"abka007\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0b2b776050108bc79",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b2b776050108bc79",
            "ingress": [],
            "name": "abka007}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"abka007\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1085147635",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2b776050108bc79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"adha011\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"adha011\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0b178049f4fad1aa3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "adha011-profile",
            "id": "i-0b178049f4fad1aa3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b5fe2f19719f169",
            "private_dns": "ip-172-31-14-17.eu-north-1.compute.internal",
            "private_ip": "172.31.14.17",
            "public_dns": "ec2-16-170-165-61.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.165.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0009b456b7aec1755",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "adha011}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "adha011"
            },
            "tags_all": {
              "Name": "adha011"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0885bde64d83b4e86"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"adha011\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0885bde64d83b4e86",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0885bde64d83b4e86",
            "ingress": [],
            "name": "adha011}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"adha011\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1233795477",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0885bde64d83b4e86",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ceiv001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"ceiv001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-01c00acb077ca93b7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ceiv001-profile",
            "id": "i-01c00acb077ca93b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa7eb6deb2e21fe5",
            "private_dns": "ip-172-31-9-123.eu-north-1.compute.internal",
            "private_ip": "172.31.9.123",
            "public_dns": "ec2-13-53-172-235.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.172.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b01348e1e87fc1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ceiv001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "ceiv001"
            },
            "tags_all": {
              "Name": "ceiv001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7d3e163a3f78c19"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ceiv001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0e7d3e163a3f78c19",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e7d3e163a3f78c19",
            "ingress": [],
            "name": "ceiv001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ceiv001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3292720509",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7d3e163a3f78c19",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chhe015\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"chhe015\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-06b1d243b5fa1abbf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chhe015-profile",
            "id": "i-06b1d243b5fa1abbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03142adc1fdb5de52",
            "private_dns": "ip-172-31-4-177.eu-north-1.compute.internal",
            "private_ip": "172.31.4.177",
            "public_dns": "ec2-13-53-138-232.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.138.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdaa7a7cae74b7fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "chhe015}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "chhe015"
            },
            "tags_all": {
              "Name": "chhe015"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002a70c85bca56050"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chhe015\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-002a70c85bca56050",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-002a70c85bca56050",
            "ingress": [],
            "name": "chhe015}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chhe015\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4065570807",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-002a70c85bca56050",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chli009\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"chli009\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0b2d0f3ad5872b00a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chli009-profile",
            "id": "i-0b2d0f3ad5872b00a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0272d1c6fe995093f",
            "private_dns": "ip-172-31-3-191.eu-north-1.compute.internal",
            "private_ip": "172.31.3.191",
            "public_dns": "ec2-13-53-169-102.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.169.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0853ffe98549c1c46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "chli009}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "chli009"
            },
            "tags_all": {
              "Name": "chli009"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a25259486e13fd1b"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chli009\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0a25259486e13fd1b",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a25259486e13fd1b",
            "ingress": [],
            "name": "chli009}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"chli009\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1528746064",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a25259486e13fd1b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"damo006\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"damo006\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-05a2c21c82d390751",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "damo006-profile",
            "id": "i-05a2c21c82d390751",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0710474e8af6d5a6c",
            "private_dns": "ip-172-31-8-232.eu-north-1.compute.internal",
            "private_ip": "172.31.8.232",
            "public_dns": "ec2-16-170-169-119.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.169.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b41c2911da85844",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "damo006}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "damo006"
            },
            "tags_all": {
              "Name": "damo006"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5cc375d032afcfb"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"damo006\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0a5cc375d032afcfb",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a5cc375d032afcfb",
            "ingress": [],
            "name": "damo006}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"damo006\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-357585398",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5cc375d032afcfb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"esha014\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"esha014\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-094538b32153b8b00",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "esha014-profile",
            "id": "i-094538b32153b8b00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014f05e249274c4ee",
            "private_dns": "ip-172-31-0-70.eu-north-1.compute.internal",
            "private_ip": "172.31.0.70",
            "public_dns": "ec2-16-170-167-164.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.167.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b79b2bb9997204a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "esha014}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "esha014"
            },
            "tags_all": {
              "Name": "esha014"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f7c6dfdc4eba69a"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"esha014\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-09f7c6dfdc4eba69a",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-09f7c6dfdc4eba69a",
            "ingress": [],
            "name": "esha014}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"esha014\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1453517064",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f7c6dfdc4eba69a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"fuka001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"fuka001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0ed9c55ef4c466822",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fuka001-profile",
            "id": "i-0ed9c55ef4c466822",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030e155fb7359de00",
            "private_dns": "ip-172-31-8-45.eu-north-1.compute.internal",
            "private_ip": "172.31.8.45",
            "public_dns": "ec2-13-53-234-53.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.234.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c7f1dd5886cf409",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "fuka001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "fuka001"
            },
            "tags_all": {
              "Name": "fuka001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a3e4a7f8a95b998"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"fuka001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-06a3e4a7f8a95b998",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-06a3e4a7f8a95b998",
            "ingress": [],
            "name": "fuka001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"fuka001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1416222188",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06a3e4a7f8a95b998",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"geto002\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"geto002\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-051b00cb1b3705bac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "geto002-profile",
            "id": "i-051b00cb1b3705bac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-064791d40d97227e6",
            "private_dns": "ip-172-31-15-3.eu-north-1.compute.internal",
            "private_ip": "172.31.15.3",
            "public_dns": "ec2-13-48-196-85.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.196.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095bab209bd6cecb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "geto002}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "geto002"
            },
            "tags_all": {
              "Name": "geto002"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8d86ec4c373225e"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"geto002\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0f8d86ec4c373225e",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0f8d86ec4c373225e",
            "ingress": [],
            "name": "geto002}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"geto002\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-358555000",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8d86ec4c373225e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha028\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"haha028\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0b171a9d7ae6e4db4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "haha028-profile",
            "id": "i-0b171a9d7ae6e4db4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0602a1465d48ba88f",
            "private_dns": "ip-172-31-7-15.eu-north-1.compute.internal",
            "private_ip": "172.31.7.15",
            "public_dns": "ec2-16-170-169-117.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.169.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094fc5665464cfcee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "haha028}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "haha028"
            },
            "tags_all": {
              "Name": "haha028"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0860f073938623ea4"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha028\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0860f073938623ea4",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0860f073938623ea4",
            "ingress": [],
            "name": "haha028}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha028\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3960310584",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0860f073938623ea4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha029\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"haha029\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-07e0819573d5e5bcc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "haha029-profile",
            "id": "i-07e0819573d5e5bcc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a249af46fe763b74",
            "private_dns": "ip-172-31-6-111.eu-north-1.compute.internal",
            "private_ip": "172.31.6.111",
            "public_dns": "ec2-13-53-235-182.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.235.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c56f0c7093db2f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "haha029}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "haha029"
            },
            "tags_all": {
              "Name": "haha029"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eacd0794ad4fa852"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha029\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0eacd0794ad4fa852",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0eacd0794ad4fa852",
            "ingress": [],
            "name": "haha029}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"haha029\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1111035633",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eacd0794ad4fa852",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"hayo001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"hayo001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-073924d481e8241f3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hayo001-profile",
            "id": "i-073924d481e8241f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfbc1199e8b47dc0",
            "private_dns": "ip-172-31-1-22.eu-north-1.compute.internal",
            "private_ip": "172.31.1.22",
            "public_dns": "ec2-16-170-167-93.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.167.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0446601458c39a85e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hayo001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "hayo001"
            },
            "tags_all": {
              "Name": "hayo001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009428d052acfbb00"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"hayo001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-009428d052acfbb00",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-009428d052acfbb00",
            "ingress": [],
            "name": "hayo001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"hayo001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3703493043",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009428d052acfbb00",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"kaam004\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"kaam004\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0c08ab8f51aa80314",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kaam004-profile",
            "id": "i-0c08ab8f51aa80314",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00604b3b4584d52e0",
            "private_dns": "ip-172-31-8-175.eu-north-1.compute.internal",
            "private_ip": "172.31.8.175",
            "public_dns": "ec2-13-48-204-167.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.204.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d79730e876226a2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kaam004}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "kaam004"
            },
            "tags_all": {
              "Name": "kaam004"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08a6b629625349373"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"kaam004\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-08a6b629625349373",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08a6b629625349373",
            "ingress": [],
            "name": "kaam004}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"kaam004\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2573745462",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08a6b629625349373",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"laba006\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"laba006\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0ee6a3a083812aaba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "laba006-profile",
            "id": "i-0ee6a3a083812aaba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0869d24296beda36d",
            "private_dns": "ip-172-31-8-189.eu-north-1.compute.internal",
            "private_ip": "172.31.8.189",
            "public_dns": "ec2-13-53-188-175.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.188.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0160cdfbaceb04b66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "laba006}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "laba006"
            },
            "tags_all": {
              "Name": "laba006"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0748b87dbfd51bd2e"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"laba006\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0748b87dbfd51bd2e",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0748b87dbfd51bd2e",
            "ingress": [],
            "name": "laba006}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"laba006\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2080814894",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0748b87dbfd51bd2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"lama003\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"lama003\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-09a303d89bb386031",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lama003-profile",
            "id": "i-09a303d89bb386031",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb606f3eef769a8d",
            "private_dns": "ip-172-31-11-240.eu-north-1.compute.internal",
            "private_ip": "172.31.11.240",
            "public_dns": "ec2-13-49-137-60.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.137.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e244ff8c1ef1d2a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "lama003}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "lama003"
            },
            "tags_all": {
              "Name": "lama003"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-067fd14e300cc3d4d"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"lama003\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-067fd14e300cc3d4d",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-067fd14e300cc3d4d",
            "ingress": [],
            "name": "lama003}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"lama003\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3626841301",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067fd14e300cc3d4d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"maen030\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"maen030\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0028e9983931362d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "maen030-profile",
            "id": "i-0028e9983931362d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0117bb75b882385f9",
            "private_dns": "ip-172-31-10-201.eu-north-1.compute.internal",
            "private_ip": "172.31.10.201",
            "public_dns": "ec2-16-170-133-90.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.133.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004be563e43b834e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "maen030}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "maen030"
            },
            "tags_all": {
              "Name": "maen030"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013572127d04ecc5c"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"maen030\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-013572127d04ecc5c",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-013572127d04ecc5c",
            "ingress": [],
            "name": "maen030}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"maen030\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3391541844",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-013572127d04ecc5c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"oyre001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"oyre001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0ebd7ceae98891eb4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "oyre001-profile",
            "id": "i-0ebd7ceae98891eb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f603b57b2a95af3",
            "private_dns": "ip-172-31-8-66.eu-north-1.compute.internal",
            "private_ip": "172.31.8.66",
            "public_dns": "ec2-16-170-170-24.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.170.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0394577e16430e285",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "oyre001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "oyre001"
            },
            "tags_all": {
              "Name": "oyre001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052ca1886c258356a"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"oyre001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-052ca1886c258356a",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-052ca1886c258356a",
            "ingress": [],
            "name": "oyre001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"oyre001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4021803316",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052ca1886c258356a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"phhe002\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"phhe002\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0d9641970b6229746",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "phhe002-profile",
            "id": "i-0d9641970b6229746",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ebf3d7cc7a77641",
            "private_dns": "ip-172-31-11-219.eu-north-1.compute.internal",
            "private_ip": "172.31.11.219",
            "public_dns": "ec2-16-170-170-130.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.170.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfed523b0c971d72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "phhe002}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "phhe002"
            },
            "tags_all": {
              "Name": "phhe002"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9b1587564331537"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"phhe002\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0c9b1587564331537",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c9b1587564331537",
            "ingress": [],
            "name": "phhe002}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"phhe002\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1643887232",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9b1587564331537",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ruda003\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"ruda003\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-0fa30bfaf673513f0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ruda003-profile",
            "id": "i-0fa30bfaf673513f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05071302c951141e8",
            "private_dns": "ip-172-31-0-99.eu-north-1.compute.internal",
            "private_ip": "172.31.0.99",
            "public_dns": "ec2-16-170-15-85.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.15.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0022abfd7a89722",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ruda003}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "ruda003"
            },
            "tags_all": {
              "Name": "ruda003"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0936c6d3501de00ec"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ruda003\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-0936c6d3501de00ec",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0936c6d3501de00ec",
            "ingress": [],
            "name": "ruda003}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"ruda003\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4240172751",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0936c6d3501de00ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"stwe001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"stwe001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-05fa27d0ec1400ad3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "stwe001-profile",
            "id": "i-05fa27d0ec1400ad3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060a74e6feeddbfb0",
            "private_dns": "ip-172-31-13-141.eu-north-1.compute.internal",
            "private_ip": "172.31.13.141",
            "public_dns": "ec2-16-170-40-2.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.40.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05240c2b5ff3505a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "stwe001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "stwe001"
            },
            "tags_all": {
              "Name": "stwe001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03d855779887f5c9e"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"stwe001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-03d855779887f5c9e",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-03d855779887f5c9e",
            "ingress": [],
            "name": "stwe001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"stwe001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2455306332",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03d855779887f5c9e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"wehu001\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:vpc/vpc-1f09da76",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a4d002cd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff6dbe96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1f09da76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-201cce49",
            "owner_id": "244530008913",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.students[\"wehu001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fce25857d9f86070",
            "arn": "arn:aws:ec2:eu-north-1:244530008913:instance/i-055b7a6570e3f6b38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wehu001-profile",
            "id": "i-055b7a6570e3f6b38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0154c0b3e6ad32ad2",
            "private_dns": "ip-172-31-15-54.eu-north-1.compute.internal",
            "private_ip": "172.31.15.54",
            "public_dns": "ec2-13-53-136-151.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.136.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edea00e4a03248cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "wehu001}-allow_ssm"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3485589",
            "tags": {
              "Name": "wehu001"
            },
            "tags_all": {
              "Name": "wehu001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04e517e1ef910bca1"
            ]
          },
          "dependencies": [
            "module.students.aws_iam_instance_profile.ssm_profile",
            "module.students.aws_iam_role.instance_profile",
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"wehu001\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:244530008913:security-group/sg-04e517e1ef910bca1",
            "description": "Allow SSM sessions to be initiated",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-04e517e1ef910bca1",
            "ingress": [],
            "name": "wehu001}-allow_ssm",
            "name_prefix": "",
            "owner_id": "244530008913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sm"
            },
            "tags_all": {
              "Name": "allow_sm"
            },
            "timeouts": null,
            "vpc_id": "vpc-1f09da76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.students[\"wehu001\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1333574714",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e517e1ef910bca1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.students.aws_security_group.ssm",
            "module.students.data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}